# monadius

./: Monadius.cabal  Readme.md  Setup.hs  readme-j.txt
.github/workflows/: cabal.yml  format.yml  stack.yml
app/: Main.hs
src/: Demo.hs  Game.hs  Monadius.hs  Recorder.hs  Util.hs
src/Monadius/: Demo.hs  Game.hs  GameObject.hs  Key.hs  Recorder.hs  Util.hs
src/Monadius/Constant/: GameObject.hs  Parameter.hs
