cabal-version: 2.4
name:          Monadius
version:       0.99
synopsis:      2-D arcade scroller
description:
  A fast-paced 2-D scrolling vector graphics clone of the arcade game Gradius;
  it is dedicated to the 20th anniversary of Gradius series.

license:       GPL-2.0-or-later
license-file:  LICENSE
author:        Takayuki Muranushi & Hideyuki Tanaka
maintainer:    Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
stability:     Stable
category:      Game
homepage:
  http://www.geocities.jp/takascience/haskell/monadius_en.html

build-type:    Simple
tested-with:   GHC ==8.8.4 || ==8.10.3
data-files:
  readme-e.txt
  readme-j.txt

source-repository head
  type:     git
  location: git://github.com/tanakh/monadius.git

common common
  build-depends:
    , base       >=4.12 && <4.15
    , directory  >=1.2
    , GLUT       >=2.4

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , array   >=0.4
    , OpenGL  >=2.8

  -- cabal-fmt: expand src
  exposed-modules:
    Monadius
    Monadius.Constant.GameObject
    Monadius.Constant.Parameter
    Monadius.Demo
    Monadius.Game
    Monadius.Recorder
    Monadius.Util

executable monadius
  import:        common
  main-is:       app/Main.hs
  build-depends: Monadius
  ghc-options:   -O2

  if os(windows)
    ghc-options: -optl-mwindows
